<resources>
    <string name="app_name">UI UX easefix</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="clock">Clock</string>
    <string name="map">MAP</string>
    <string name="logger">Logger</string>
    <string name="profile">Profile</string>
</resources>