<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home"
        android:icon="@drawable/home"
        android:title="@string/home"
        android:checked="true"
        android:color="@color/white"/>

    <item
        android:id="@+id/clock"
        android:icon="@drawable/clock"
        android:title="@string/clock"
        android:color="@color/white"/>

    <item
        android:id="@+id/navigation"
        android:icon="@drawable/navigation"
        android:title="@string/map"
        android:color="@color/white"/>

    <item
        android:id="@+id/bell"
        android:icon="@drawable/bell"
        android:title="@string/logger"
        android:color="@color/white"/>

    <item
        android:id="@+id/log"
        android:icon="@drawable/male"
        android:title="@string/profile"
        android:color="@color/white"/>
</menu>